--- a/frontend/web/v1/css/style.css
+++ b/frontend/web/v1/css/style.css
@@ -66,6 +66,14 @@ html {font-size: 75%}
 body {font: normal 1em/1.3 'RalewayRegular', sans-serif}
 .wrapper {padding: 0 7%; margin: 0 auto;}
 .content-wrapper {padding: 0 7%;}
+.content-wrapper:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+.content-wrapper + .button {
+    margin-top: 50px;
+}
 .office .wrapper {max-width: 1040px; padding: 0 20px;}
 .content-tours{
     max-width:980px;
@@ -85,7 +93,7 @@ h1+p,
 .btn {display: block; width: 220px; height: 36px; color: #515151; font-size: 1.2em; text-decoration: none; margin: 0 auto; text-align: center; line-height: 36px;}
 .yellow,
 .btn-primary,
-.btn-success {background-color: #fff; border: 1px solid #ffd800; transition: background .5s ease-in-out;}
+.btn-success {background-color: #fff; border: 1px solid #ffd800; transition: background .5s ease-in-out; color: #515151;}
 .yellow:hover,
 .btn-primary:hover,
 .btn-success:hover {background-color: #ffd800;}
@@ -119,7 +127,7 @@ h1+p,
 .with-rating.content-wrapper>h1 {display: inline-block; position: relative;}
 .with-rating.content-wrapper>h1 div {position: absolute; display: block; top: -18px; right: -140px;}
 .tour-count,
-.country-count, .head-count {position: absolute; display: block; font-size: 15px; width: 69px; height: 24px; background-color: #ea2a53; color: #fff; font-weight: 400; top: -12px; right: -72px;}
+.country-count, .head-count {position: absolute; display: block; font-size: 15px; width: 69px; height: 24px; line-height: 22px; background-color: #ea2a53; color: #fff; font-weight: 400; top: -12px; right: -72px;}
 .has_error {border:1px solid red !important;}
 
 /*Header styles*/
@@ -193,7 +201,7 @@ footer nav a:hover {text-decoration: none;}
 .grid-item h3 {font-size: 1.2em; line-height: 20px;}
 .grid-item:hover h3 {color: #00a2ff;}
 .grid-item {line-height: 25px;}
-.grid-item p {font-size: 1.13em; line-height: 20px;}
+.grid-item p {font-size: 1.13em; line-height: 20px; margin-left: 0;}
 
 .button {display: block; width: 220px; height: 36px; color: #515151; font-size: 15px; text-decoration: none; margin: 0 auto; text-align: center; line-height: 32px;}
 
@@ -304,9 +312,9 @@ a.blue {color: #0096ff;}
 #filter,
 .content-wrapper #w0 {margin: 50px auto; text-align: center;}
 .content-wrapper #w0 input,
-.content-wrapper #w0 select {height: 30px; width: 180px; font-size: 14px;}
-.content-wrapper #w0 .form-group { text-align: left;}
-.content-wrapper #w0 .form-group:last-child {width: 220px;}
+.content-wrapper #w0 select {height: 30px; width: 100%; font-size: 14px;}
+.content-wrapper #w0 .form-group {text-align: left;}
+.content-wrapper #w0 .form-group:last-child {}
 .regular-form input,
 .selects select {-webkit-appearance: none; -moz-appearance: none; appearance: none; height: 30px; min-width: 180px;  border: 1px solid #d0d0d0; padding-left: 10px; cursor: pointer; color: #828282;}
 .regular-form select:focus,
@@ -315,7 +323,13 @@ a.blue {color: #0096ff;}
 #filter select:focus::before {background-image: url("../img/select-arrow-up.png");}
 .regular-form label,
 #filter label,
-.content-wrapper #w0 .form-group {position: relative; display: inline-block; margin: 20px 16px; vertical-align: top;}
+.content-wrapper #w0.feedback-form {
+    max-width: 570px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.content-wrapper #w0 .form-group {position: relative; margin: 20px 16px; display: inline-block; vertical-align: top;}
+.content-wrapper #w0.feedback-form .form-group {display: block;}
 .regular-form label .arr,
 #filter label .arr {display: block; position: absolute; width: 9px; height: 6px; background: url("../img/select-arrow.png") no-repeat; right: 10px; top: 12px;}
 #filter .extended {display: block; margin: 30px auto; font-size: 15px;}
@@ -374,16 +388,18 @@ a.blue {color: #0096ff;}
 .all-news {padding: 72px 0;}
 
 /*Companions page styles*/
-.content-wrapper.companions {text-align: center;}
+.content-wrapper.companions {text-align: center; max-width: 1110px; margin: 0 auto;}
 .content-wrapper.companions>h1 {position: relative; display: inline-block; margin-top: 75px;}
+.content-wrapper.companions>p {margin-left: 0;}
 .tags-container {text-align: left;}
-.tags-container span {position: relative; min-height: 25px; background: #fff; border: 1px solid #ffd800; padding: 0 30px; line-height: 25px; color: #5b5b5b; font-size: 14px; text-decoration: none; margin: 5px; cursor: pointer;}
+.tags-container a {text-decoration: none;}
+.tags-container span {position: relative; min-height: 25px; background: #fff; border: 1px solid #ffd800; padding: 0 30px; line-height: 23px; color: #5b5b5b; font-size: 14px; text-decoration: none; margin: 5px; cursor: pointer; display: inline-block;}
 .tags-container span:hover, .tags-container span.checked {background: #ffd800;}
 .tags-container span.checked i.fa-check {display: block;}
 .tags-container span.checked:hover i.fa-check {display: none;}
 .tags-container span.checked:hover i.fa-times {display: block;}
 .tags-container span:hover i.fa-check {display: block;}
-.tags-container i {display: none; position: absolute; right: 5px; top: 1px;}
+.tags-container i {display: none; position: absolute; right: 5px; top: 5px;}
 .companions-container {margin: 25px auto; text-align: left;}
 .companions-container article {margin: 30px auto; padding: 5px; border: 1px solid #cdcdcd;}
 .companions-container .creds>a {position: relative; min-width: 100px; width: 100px; height: 100px; border-radius: 3px; margin-right: 15px; overflow: hidden;}
@@ -412,6 +428,47 @@ a.blue {color: #0096ff;}
 .creds .fa-transgender {background-color: #ea8d2a;}
 .companions-container .tag {display: inline-block; padding: 4px 18px; background: #ffd800; color: #5b5b5b; font-size: 14px; margin-right: 16px; vertical-align: top; text-decoration: none;}
 
+.companions-select {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.companions-select-col {
+    display: block;
+    min-width: 200px;
+    max-width: 200px;
+    width: 200px;
+    margin: 15px 12px;
+}
+.m-b-lg {
+    margin-bottom: 50px;
+}
+.m-l-none {
+    margin-left: 0;
+}
+.company-images {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    margin: 20px 0;
+}
+.company-images img {
+    display: block;
+    padding: 5px;
+    min-width: 25%;
+    max-width: 250px;
+}
 
 /*Company page styles*/
 .tabs-container { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; border-bottom: 1px solid #c7c7c7;}
@@ -434,11 +491,11 @@ a.blue {color: #0096ff;}
 .desc-head .timing,
 .desc-head .info,
 .desc-head .contact {padding-left: 25px; padding-top: 8px;}
-.desc-head .timing {margin-left: 29px;}
-.desc-head .info {margin: 0px 10px 0 8%;}
+.desc-head .timing {margin-left: 29px; min-width: 180px;}
+.desc-head .info {margin: 0px 10px 0 15px;}
 .desc-head h3 {font-size: 1.5em; font-weight: 400; text-decoration: underline; padding-bottom: 13px; position: relative; line-height: 26px;}
 .desc-head h3 i {position: absolute; left: -20px; top: 5px;}
-.desc-head p {line-height: 18px;}
+.desc-head p {line-height: 18px; margin-left: 0;}
 .desc-head a {color: #59aeff; margin: 4px 0; display: block; font-size: 1.2em;}
 .desc-head .timing {border-left: 1px solid #c7c7c7;}
 .desc-head .timing li {line-height: 24px;}
@@ -448,7 +505,7 @@ a.blue {color: #0096ff;}
 .desc-head .contact li,
 .manager-contact li {position: relative; font-size: 1.3em; line-height: 30px;}
 .desc-head .contact li::before,
-.manager-contact li::before {content: ""; display: block; position: absolute; top: 9px; width: 16px; height: 16px;}
+.manager-contact li::before {content: ""; display: block; position: absolute; top: 7px; left: 0px; width: 16px; height: 16px;}
 .desc-head .contact li::before {left: -20px;}
 .contact-phone::before {background: url(../img/icon-contact-phone.jpg) no-repeat;}
 .contact-life::before {background: url(../img/icon-contact-life.jpg) no-repeat;}
@@ -561,8 +618,8 @@ hr.medium {width: 100%; max-width: 790px; height: 1px; margin: 40px auto; backgr
 .graduation-form button::before {content: ""; position: absolute; top: 10px; left: 37px; width: 50px; height: 35px; background: url("../img/form-check.png") no-repeat; }
 .graduation-container .graduation {margin: 15px auto 15px;}
 /*Contact page styles*/
-.contacts-container .manager-contact {text-align: center;}
-.contacts-container .manager-contact li {max-width: 200px; margin: 5px auto;}
+.contacts-container .manager-contact {text-align: center; column-count: 3; max-width: 860px; margin: 30px auto 60px;}
+.contacts-container .manager-contact li {width: 33.3%; white-space: nowrap; margin: 3px auto; padding-left: 25px; text-align: left;}
 .contact-container h1 {font-size: 36px; font-family: "RalewayExtraLight";}
 .map-canvas {height: 380px; margin: 40px auto; background: url("../img/contact-map.jpg") no-repeat; background-size: cover;}
 .contact-map {margin: 45px auto;}
@@ -1072,7 +1129,7 @@ transition: opacity 0.3s ease;}
 .office .company-managers .manager .edit i,
 .office .grid .grid-item .controls .edit i {position: relative; top: 1px; left: 1px;}
 .office .grid {display: -webkit-flex; display: -moz-flex; display: -ms-flex; display: -o-flex; display: flex; -webkit-flex-wrap: wrap; -moz-flex-wrap: wrap; -ms-flex-wrap: wrap; -o-flex-wrap: wrap; flex-wrap: wrap;}
-.office .grid .grid-item {margin-right: 29px;}
+.office .grid .grid-item {margin-right: 29px; max-width: 530px;}
 .office .grid .grid-item .controls {padding-top: 0;}
 .office .grid .grid-item img {width: 100%;}
 .office .grid-item:hover h3 {color: #000;}
@@ -1524,6 +1581,9 @@ transition: opacity 0.3s ease;}
     .company-report-full form {width: auto;}
     .register-page .select {margin-bottom: 20px; width: 100%;}
     .register-page .select:last-child {margin-bottom: 0;}
+
+    .contacts-container .manager-contact {column-count: 2;}
+    .contacts-container .manager-contact li {width: 50%;}
 }
 
 @media screen and (max-width: 600px){
@@ -1567,6 +1627,8 @@ transition: opacity 0.3s ease;}
     .textareas.container > * {max-width: none;}
     .create-req-form .hotel-prefs input {width: 87%; min-width: 0;}
     #order_activity + label {left: 0;}
+
+    .contacts-container .manager-contact {column-count: 1;}
 }
 
 @media screen and (max-width: 530px){
@@ -2207,4 +2269,15 @@ transition: opacity 0.3s ease;}
     .discount-item {
         width: 100%;
     }
+}
+
+
+a h3 {
+    color: #1D1D1D;
+}
+a p {
+    color: #696969;
+}
+.grid-item:hover h3 {
+    color: #00A2FF !important;
 }
