--- a/frontend/web/v1/css/style.css
+++ b/frontend/web/v1/css/style.css
@@ -812,21 +812,21 @@ select{
 .make-order-form {width: 100%;}
 .make-order-form .section {margin: 35px 0; color: #828282; font-size: 18px; font-weight: 400; line-height: 20px; text-decoration: underline; text-transform: uppercase;}
 .make-order-form .main-info {text-align: left;}
-.make-order-form .main-info .select {display: inline-block; position: relative; vertical-align: top; width: 190px; height: 30px; margin: 0 0 22px; background-color: white; border: 1px solid #d0d0d0;}
+.make-order-form .main-info .select {display: inline-block; position: relative; vertical-align: top; width: 190px; height: 30px; margin: 0 0 22px; border: 1px solid #d0d0d0;}
 .make-order-form .main-info .select::after {content: ""; position: absolute; right: 10px; top: 13px; pointer-events: none; width: 9px; height: 6px; background: url("../img/select-arrow.png") no-repeat;}
 .make-order-form .main-info .select:hover::after {background-image: url("../img/select-arrow-up.png");}
 .make-order-form .main-info .select {margin-right: 24px;}
 .make-order-form .main-info .redactor-box {margin: 20px 0 0;}
 .make-order-form .main-info .select select {height: 100%; font-size: 15px; font-weight: 400; line-height: 20px;}
 .make-order-form .main-info .select select {height: 100%; font-size: 15px; font-weight: 400; line-height: 20px;}
-.make-order-form#w0 .main-info .select {border: none; overflow: visible; min-height: 30px; height: auto;}
-.make-order-form#w0 .main-info .select::after {display: none;}
+.make-order-form .main-info .select {border: none; overflow: visible; min-height: 30px; height: auto;}
+.make-order-form .main-info .select::after {display: none;}
 .make-order-form .main-info .select .form-group,
 .make-order-form#w0 .main-info .select .form-group {margin: 0;width: 100%;height: 100%;}
 .make-order-form .main-info .select .form-group input,
 .make-order-form#w0 .main-info .select .form-group input,
 .make-order-form .main-info .select .form-group select,
-.make-order-form#w0 .main-info .select .form-group select {width: 100%;height: 34px;}
+.make-order-form#w0 .main-info .select .form-group select {width: 100% !important;height: 34px !important;}
 .make-order-form input[type="checkbox"] {display: none;}
 .make-order-form .nutrition-prefs label,
 .make-order-form .cat label {display: inline-block; color: #828282; font-size: 16px; font-weight: 400; line-height: 20px; cursor: pointer;}
